--- a/Crud1/Views/Shared/_Layout.cshtml
+++ b/Crud1/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Celaning Buddies</title>
+    <title>@ViewData["Title"] - Cleaning Buddies</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Crud1.styles.css" asp-append-version="true" />
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Receipt" asp-action="Index">Ordenar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Order">Ordenar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Receipt" asp-action="Index">Ordenar</a>
                         </li>
                     </ul>
                 </div>
