--- a/Crud1/Views/Product/Index.cshtml
+++ b/Crud1/Views/Product/Index.cshtml
@@ -34,9 +34,9 @@
                 <td>@product.pro_price</td>
                 <td>@product.pro_description</td>
                 <td style="white-space:nowrap">
-                    <a class="btn btn-primary btn-sm" asp-controller="Product" asp-action="Edit"
+                    <a class="btn btn-primary btn-warning" asp-controller="Product" asp-action="Edit"
                        asp-route-id="@product.Pro_id">Edit</a>
-                    <a class="btn btn-primary btn-sm" asp-controller="Product" asp-action="Delete"
+                    <a class="btn btn-primary btn-danger" asp-controller="Product" asp-action="Delete"
                        asp-route-id="@product.Pro_id">Delete</a>
                 </td>
             </tr>
