--- a/Crud1/Views/Product/Index.cshtml
+++ b/Crud1/Views/Product/Index.cshtml
@@ -37,7 +37,7 @@
                     <a class="btn btn-primary btn-warning" asp-controller="Product" asp-action="Edit"
                        asp-route-id="@product.Pro_id">Edit</a>
                     <a class="btn btn-primary btn-danger" asp-controller="Product" asp-action="Delete"
-                       asp-route-id="@product.Pro_id" onclick="return comfirm('¿Estas seguro?')">Delete</a>
+                       asp-route-id="@product.Pro_id" onclick="return confirm('¿Estas seguro?')">Delete</a>
                 </td>
             </tr>
         }
