--- a/Crud1/Views/Home/Index.cshtml
+++ b/Crud1/Views/Home/Index.cshtml
@@ -2,7 +2,52 @@
     ViewData["Title"] = "Inicio";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body>
+
+    <header class="bg-light p-3 box-shadow rounded">
+        <h1 class="text-center m-3"><strong>Bienvenido</strong></h1>
+    </header>
+
+    <div class="container p-3">
+        <div class="row text-center">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Tarjeta 1</h5>
+                        <p class="card-text">Descripción de la tarjeta 1.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Tarjeta 2</h5>
+                        <p class="card-text">Descripción de la tarjeta 2.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Tarjeta 3</h5>
+                        <p class="card-text">Descripción de la tarjeta 3.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Área principal -->
+        <div class="main-area text-center">
+            <div class="border p-3">
+                <h2>Área Principal</h2>
+                <p>Aquí puedes agregar más contenido o información relevante.</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
