--- a/Crud1/Views/Shared/_Layout.cshtml
+++ b/Crud1/Views/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Crud1.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body style="background-color: #AEC09A">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #344C11; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cleaning Buddies</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Cleaning Buddies</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index"><strong>Inicio</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Productos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Product" asp-action="Index"><strong>Productos</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Receipt" asp-action="Index">Ordenar</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Receipt" asp-action="Index"><strong>Ordenar</strong></a>
                         </li>
                     </ul>
                 </div>
