--- a/Crud1/Views/Home/Index.cshtml
+++ b/Crud1/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="row text-center">
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <img src=" ~ /img/1.jpg" class="card-img-top" alt="Imagen de Tarjeta 1">
                     <div class="card-body">
                         <h5 class="card-title">Tarjeta 1</h5>
                         <p class="card-text">Descripción de la tarjeta 1.</p>
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <img src=" ~ /img/2.jpg" class="card-img-top" alt="Imagen de Tarjeta 1">
                     <div class="card-body">
                         <h5 class="card-title">Tarjeta 2</h5>
                         <p class="card-text">Descripción de la tarjeta 2.</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Imagen de Tarjeta 1">
+                    <img src="~/img/3.png" class="card-img-top" alt="Imagen de Tarjeta 1">
                     <div class="card-body">
                         <h5 class="card-title">Tarjeta 3</h5>
                         <p class="card-text">Descripción de la tarjeta 3.</p>
@@ -39,7 +39,6 @@
             </div>
         </div>
 
-        <!-- Área principal -->
         <div class="main-area text-center">
             <div class="border p-3">
                 <h2>Área Principal</h2>
