--- a/Crud1/Views/Shared/_Layout.cshtml
+++ b/Crud1/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color: #344C11; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container">
             &copy; 2024 - Crud1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
