--- a/Crud1/Views/Home/Index.cshtml
+++ b/Crud1/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <body>
 
-    <header class="bg-light p-3 box-shadow rounded">
-        <h1 class="text-center m-3"><strong>Bienvenido</strong></h1>
+    <header class="bg-light p-3 mt-3 box-shadow rounded">
+        <h1 class="text-center m-3"><strong>Bienvenido!</strong></h1>
     </header>
 
     <div class="container p-3">
@@ -14,35 +14,40 @@
                 <div class="card">
                     <img src="~/img/1.jpg" class="card-img-top" alt="Imagen de Tarjeta 1">
                     <div class="card-body">
-                        <h5 class="card-title">Tarjeta 1</h5>
-                        <p class="card-text">Descripción de la tarjeta 1.</p>
+                        <h5 class="card-title"><strong>Aspiradora Robot ProClean 3000</strong></h5>
+                        <p class="card-text">Esta aspiradora robot de última generación cuenta con sensores inteligentes que detectan la suciedad y se adapta a diferentes superficies.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="~/img/2.jpg" class="card-img-top" alt="Imagen de Tarjeta 1">
+                <div class="card mb-3">
+                    <img src="~/img/2.jpg" class="card-img-top" alt="Imagen de Tarjeta 2">
                     <div class="card-body">
-                        <h5 class="card-title">Tarjeta 2</h5>
-                        <p class="card-text">Descripción de la tarjeta 2.</p>
+                        <h5 class="card-title"><strong>Robot Limpiador MultiSuperficie</strong></h5>
+                        <p class="card-text">Diseñado para una limpieza eficaz en todas las áreas de tu hogar, este robot combina la tecnología de mapeo con un sistema de limpieza a fondo.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="~/img/3.png" class="card-img-top" alt="Imagen de Tarjeta 1">
+                <div class="card pb">
+                    <img src="~/img/3.png" class="card-img-top" alt="Imagen de Tarjeta 3">
                     <div class="card-body">
-                        <h5 class="card-title">Tarjeta 3</h5>
-                        <p class="card-text">Descripción de la tarjeta 3.</p>
+                        <h5 class="card-title"><strong>Limpiador de Pisos Automático SmartClean</strong></h5>
+                        <p class="card-text">Este limpiador de pisos automatizado ofrece una solución sencilla para mantener tus suelos impecables. </p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="main-area text-center">
-            <div class="border p-3">
-                <h2>Área Principal</h2>
-                <p>Aquí puedes agregar más contenido o información relevante.</p>
+            <div class="border p-3 rounded-" style=" background-color: #E9E7E2;">
+                <h2>Somos Cleaning Buddies!</h2>
+                <div class="p-3">
+                    <p style="text-align: justify;">
+                        Cleaning Buddies es una innovadora empresa dedicada a la venta de robots de limpieza, diseñada para facilitar la vida de las personas en su día a día. Con un enfoque en la tecnología avanzada y la eficiencia, Cleaning Buddies ofrece una amplia gama de robots que se adaptan a diferentes necesidades y espacios, desde aspiradoras autónomas hasta limpiadores de pisos especializados. La compañía se compromete a proporcionar productos de alta calidad que no solo ahorran tiempo, sino que también mejoran la calidad del hogar.
+                        Además, Cleaning Buddies se enorgullece de ofrecer un servicio al cliente excepcional, asegurando que cada cliente tenga una experiencia positiva desde el momento de la compra hasta la instalación y más allá. Con un equipo de expertos listos para ayudar con cualquier duda o problema, Cleaning Buddies se ha establecido como un líder en el mercado de la limpieza automatizada. La empresa también se dedica a la sostenibilidad, utilizando tecnologías que minimizan el consumo de energía y promueven un hogar más limpio y ecológico. En un mundo donde el tiempo es un recurso valioso, Cleaning Buddies se posiciona como el aliado perfecto para aquellos que buscan un hogar más limpio con el mínimo esfuerzo.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
