--- a/Crud1/Views/Shared/_Layout.cshtml
+++ b/Crud1/Views/Shared/_Layout.cshtml
@@ -39,9 +39,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #344C11; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-        <div class="container">
-            &copy; 2024 - Crud1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer text-muted" style="background-color: #344C11; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+        <div class="container text-center">
+            &copy; 2024 - Crud1
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
