--- a/Crud1/Views/Product/Index.cshtml
+++ b/Crud1/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Productos";
 }
 
-<div class="m-1 p-2 rounded-3 shadow-sm border text">
+<div class="bg-light p-2 mt-3 rounded-3 shadow-sm border text">
     <h1 class="text-center">@ViewData["Title"]</h1>
 </div>
 
